--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,12 +5,7 @@
   --foreground: #171717;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+@layer base, components, utilities;
 
 @media (prefers-color-scheme: dark) {
   :root {
